# mantis_api_code

./: .gitignore  CMakeLists.txt  get_clip_lists.cpp  readme.md  save_clip_to_video.cpp
mantis_camera_color_correction/: .gitignore  CMakeLists.txt  RelightingInterpolation.cpp  RelightingInterpolation.h  main.cpp
mantis_camera_color_correction/sh/: cmake_clean.sh  cmake_debug.sh  cmake_debug_macOS.sh  cmake_release.sh  cmake_release_macOS.sh
mantis_camera_save_to_video/: .gitignore  CMakeLists.txt  README.md
